<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/res"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button16"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/AC"/>

                <Button
                    android:id="@+id/button17"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/backspace"/>

                <Button
                    android:id="@+id/button18"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/percent"/>

                <Button
                    android:id="@+id/button19"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/divide"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button12"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/seven" />

                <Button
                    android:id="@+id/button13"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/eight" />

                <Button
                    android:id="@+id/button14"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/nine" />

                <Button
                    android:id="@+id/button15"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"
                    android:textSize="14sp"

                    android:text="@string/multiply" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button8"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/four" />

                <Button
                    android:id="@+id/button9"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/five" />

                <Button
                    android:id="@+id/button10"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/six" />

                <Button
                    android:id="@+id/button11"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/minus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button4"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/one" />

                <Button
                    android:id="@+id/button5"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/two" />

                <Button
                    android:id="@+id/button6"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/three" />

                <Button
                    android:id="@+id/button7"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/plus" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button0"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="" />

                <Button
                    android:id="@+id/button1"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/zero" />

                <Button
                    android:id="@+id/button2"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="." />

                <Button
                    android:id="@+id/button3"
                    style="@style/myButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cornerRadius="0dp"

                    android:text="@string/calculate"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>